Fixed spacing bug in add album

--- a/app/assets/stylesheets/album.scss
+++ b/app/assets/stylesheets/album.scss
@@ -192,6 +192,7 @@ div#album_list_container::-webkit-scrollbar-thumb {
 .albums {
   list-style: none;
   display: inline;
+  padding: 0;
 }
 
 div#album_info_container {
